--- a/FrannHammer.Api/packages.config
+++ b/FrannHammer.Api/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="Autofac" version="3.5.0" targetFramework="net45" />
+  <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.2.2" targetFramework="net45" />
