- Added build task to output to a dist folder for packaging and deployment

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ FrannHammer.Api/bin/
 KuroganeHammer.TransferDBTool/obj/Debug/KurograneHammer.TransferDBTool.csproj.FileListAbsolute.txt
 TestResults/FrannHammer.Master.TE.Tests.mdf
 TestResults/FrannHammer.Master.TE.Tests_log.ldf
+FrannHammer.Api/dist/
