--- a/FrannHammer.Api/FrannHammer.Api.csproj
+++ b/FrannHammer.Api/FrannHammer.Api.csproj
@@ -380,6 +380,12 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)bin" "$(ProjectDir)dist\bin\" /Y /I 
+xcopy "$(ProjectDir)App_Data" "$(ProjectDir)dist\App_Data\" /Y /I
+xcopy "$(ProjectDir)Scripts" "$(ProjectDir)dist\Scripts\" /Y /I
+xcopy "$(ProjectDir)Web.config" "$(ProjectDir)dist\" /Y /I</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
