--- a/FrannHammer.Api/packages.config
+++ b/FrannHammer.Api/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Autofac" version="3.5.0" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net45" />
+  <package id="AutoMapper" version="5.0.0" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.2.2" targetFramework="net45" />
