- Reuploading fixed config files

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@ KuroganeHammer.TransferDBTool/obj/Debug/KurograneHammer.TransferDBTool.csproj.Fi
 TestResults/FrannHammer.Master.TE.Tests.mdf
 TestResults/FrannHammer.Master.TE.Tests_log.ldf
 FrannHammer.Api/dist/
+FrannHammer.WebScraper/obj/
+KuroganeHammer.TransferDBTool/obj/
+FrannHammer.Api/Web.Debug.config
+FrannHammer.Api/Web.Release.config
+FrannHammer.Api/ConnectionStrings.config
+appsettings.config
