--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ FrannHammer.Api/Web.Debug.config
 FrannHammer.Api/Web.Release.config
 FrannHammer.Api/ConnectionStrings.config
 appsettings.config
+appsettings.config.enc
