- Removed usage of the majority of DTOs.  They're mostly pointless as this stage.  The remaining usage is for creating a 'row' of data from character attributes in CharacterAttributeRowDto - Adjusted tests to not use DTO objects - Solidified usage of IQueryable over IEnumerable or IList for the majority of dataset returns in controllers.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ FrannHammer.Api/Web.Release.config
 FrannHammer.Api/ConnectionStrings.config
 appsettings.config
 appsettings.config.enc
+FrannHammer.Models/bin/
+FrannHammer.Models/obj/
