- Cleaning up migration files - Cleaning up seed()

--- a/FrannHammer.Api/packages.config
+++ b/FrannHammer.Api/packages.config
@@ -39,6 +39,7 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="secure-file" version="1.0.31" targetFramework="net45" />
   <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebApiThrottle" version="1.4.3" targetFramework="net45" />
