--- a/FrannHammer.Api/Web.config
+++ b/FrannHammer.Api/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings configSource="ConnectionStrings.config" />
-  <appSettings>
+  <appSettings file="..\appsettings.config">
     <add key="throttlingrequestspersecond" value="50" />
   </appSettings>
   <!--
