- Updating dbtransfer tool's config and context settings

--- a/KuroganeHammer.TransferDBTool/app.config
+++ b/KuroganeHammer.TransferDBTool/app.config
@@ -10,6 +10,7 @@
     <add key="site" value="http://localhost/KHapi/api" />
     <!--<add key="site" value="http://localhost:62072/api"/>-->
   </appSettings>
+  <connectionStrings configSource="ConnectionStrings.config" />
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
