- Updating app.config file

--- a/KuroganeHammer.TransferDBTool/app.config
+++ b/KuroganeHammer.TransferDBTool/app.config
@@ -4,7 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <appSettings file="..\..\appsettings.config">
+  <appSettings file="..\..\..\appsettings.config">
     <add key="adminusername" value="KuroUser" />
     <add key="basicusername" value="GETuser" />
     <add key="site" value="http://localhost/KHapi/api" />
