--- a/FrannHammer.Api.Tests/FrannHammer.Api.Tests.csproj
+++ b/FrannHammer.Api.Tests/FrannHammer.Api.Tests.csproj
@@ -150,9 +150,8 @@
     <Compile Include="Authentation\CharacterAttributeAuthControllerTest.cs" />
     <Compile Include="Controllers\CharacterAttributeControllerTest.cs" />
     <Compile Include="Controllers\CharacterAttributeTypeControllerTest.cs" />
-    <Compile Include="Controllers\CharacterControllerTest.cs" />
     <Compile Include="Authentation\CharactersAuthenticationTest.cs" />
-    <Compile Include="Controllers\CharacterTests.cs" />
+    <Compile Include="Controllers\CharacterControllerTests.cs" />
     <Compile Include="Authentation\MovementsAuthControllerTest.cs" />
     <Compile Include="Authentation\MoveAuthControllerTest.cs" />
     <Compile Include="Controllers\MoveControllerTest.cs" />
@@ -160,6 +159,7 @@
     <Compile Include="Controllers\NotationControllerTest.cs" />
     <Compile Include="Authentation\SmashAttributeTypeAuthControllerTest.cs" />
     <Compile Include="Controllers\SmashAttributeTypesControllerTest.cs" />
+    <Compile Include="Controllers\ThrowsControllerTest.cs" />
     <Compile Include="EffortBaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestObjects.cs" />
@@ -222,6 +222,8 @@
     <Content Include="fakeDb\SmashAttributeTypes.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="fakeDb\Throws.csv" />
+    <None Include="fakeDb\ThrowTypes.csv" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
