--- a/FrannHammer.Api/FrannHammer.Api.csproj
+++ b/FrannHammer.Api/FrannHammer.Api.csproj
@@ -180,9 +180,22 @@
     <Compile Include="Controllers\NotationsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SmashAttributeTypesController.cs" />
+    <Compile Include="Controllers\ThrowsController.cs" />
     <Compile Include="Migrations\201607050019265_schema_0_2_0_update.cs" />
     <Compile Include="Migrations\201607050019265_schema_0_2_0_update.Designer.cs">
       <DependentUpon>201607050019265_schema_0_2_0_update.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607060255598_throws_last_modified.cs" />
+    <Compile Include="Migrations\201607060255598_throws_last_modified.Designer.cs">
+      <DependentUpon>201607060255598_throws_last_modified.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607060301026_throw_dt.cs" />
+    <Compile Include="Migrations\201607060301026_throw_dt.Designer.cs">
+      <DependentUpon>201607060301026_throw_dt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607060302489_throw_dt2.cs" />
+    <Compile Include="Migrations\201607060302489_throw_dt2.Designer.cs">
+      <DependentUpon>201607060302489_throw_dt2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -215,6 +228,15 @@
     <Content Include="Scripts\respond.min.js" />
     <EmbeddedResource Include="Migrations\201607050019265_schema_0_2_0_update.resx">
       <DependentUpon>201607050019265_schema_0_2_0_update.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607060255598_throws_last_modified.resx">
+      <DependentUpon>201607060255598_throws_last_modified.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607060301026_throw_dt.resx">
+      <DependentUpon>201607060301026_throw_dt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607060302489_throw_dt2.resx">
+      <DependentUpon>201607060302489_throw_dt2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SwaggerExtensions\onComplete.js" />
     <Content Include="Web.config" />
