--- a/FrannHammer.Models/FrannHammer.Models.csproj
+++ b/FrannHammer.Models/FrannHammer.Models.csproj
@@ -100,6 +100,7 @@
     <Compile Include="SmashAttributeType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Throw.cs" />
+    <Compile Include="ThrowType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
