- Completed issue #31 - Completed issue #44 (with refactoring added)

--- a/FrannHammer.Api.Tests/FrannHammer.Api.Tests.csproj
+++ b/FrannHammer.Api.Tests/FrannHammer.Api.Tests.csproj
@@ -146,20 +146,25 @@
     <Compile Include="Asserts\CollectionPropertyAssert.cs" />
     <Compile Include="Authentation\AccountsAuthenticatedControllerTest.cs" />
     <Compile Include="Authentation\BaseAuthenticationTest.cs" />
+    <Compile Include="Controllers\AnglesControllerTest.cs" />
     <Compile Include="Controllers\BaseControllerTest.cs" />
     <Compile Include="Authentation\CharacterAttributeAuthControllerTest.cs" />
+    <Compile Include="Controllers\BaseDamagesControllerTest.cs" />
     <Compile Include="Controllers\CharacterAttributeControllerTest.cs" />
     <Compile Include="Controllers\CharacterAttributeTypeControllerTest.cs" />
     <Compile Include="Authentation\CharactersAuthenticationTest.cs" />
     <Compile Include="Controllers\CharacterControllerTests.cs" />
     <Compile Include="Authentation\MovementsAuthControllerTest.cs" />
     <Compile Include="Authentation\MoveAuthControllerTest.cs" />
+    <Compile Include="Controllers\HitboxesControllerTest.cs" />
+    <Compile Include="Controllers\KnockbackGrowthControllerTest.cs" />
     <Compile Include="Controllers\MoveControllerTest.cs" />
     <Compile Include="Controllers\MovementsControllerTest.cs" />
     <Compile Include="Controllers\NotationControllerTest.cs" />
     <Compile Include="Authentation\SmashAttributeTypeAuthControllerTest.cs" />
     <Compile Include="Controllers\SmashAttributeTypesControllerTest.cs" />
     <Compile Include="Controllers\ThrowsControllerTest.cs" />
+    <Compile Include="Controllers\ThrowTypesControllerTest.cs" />
     <Compile Include="EffortBaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestObjects.cs" />
