--- a/FrannHammer.Api/FrannHammer.Api.csproj
+++ b/FrannHammer.Api/FrannHammer.Api.csproj
@@ -170,17 +170,22 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Container.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AnglesController.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
+    <Compile Include="Controllers\BaseDamagesController.cs" />
     <Compile Include="Controllers\CalculatorController.cs" />
     <Compile Include="Controllers\CharacterAttributesController.cs" />
     <Compile Include="Controllers\CharacterAttributeTypesController.cs" />
     <Compile Include="Controllers\CharactersController.cs" />
+    <Compile Include="Controllers\HitboxesController.cs" />
+    <Compile Include="Controllers\KnockbackGrowthsController.cs" />
     <Compile Include="Controllers\MovementsController.cs" />
     <Compile Include="Controllers\MovesController.cs" />
     <Compile Include="Controllers\NotationsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SmashAttributeTypesController.cs" />
     <Compile Include="Controllers\ThrowsController.cs" />
+    <Compile Include="Controllers\ThrowTypesController.cs" />
     <Compile Include="Migrations\201607050019265_schema_0_2_0_update.cs" />
     <Compile Include="Migrations\201607050019265_schema_0_2_0_update.Designer.cs">
       <DependentUpon>201607050019265_schema_0_2_0_update.cs</DependentUpon>
