--- a/FrannHammer.Models/FrannHammer.Models.csproj
+++ b/FrannHammer.Models/FrannHammer.Models.csproj
@@ -74,12 +74,15 @@
   <ItemGroup>
     <Compile Include="AccountBindingModels.cs" />
     <Compile Include="AccountViewModels.cs" />
+    <Compile Include="Angle.cs" />
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="BaseDamage.cs" />
     <Compile Include="BaseModel.cs" />
     <Compile Include="CalculatorModels.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="CharacterAttributeModels.cs" />
     <Compile Include="CharacterAttributeType.cs" />
+    <Compile Include="DTOs\BaseMoveHitboxMetaDto.cs" />
     <Compile Include="DTOs\CalculatorDtos.cs" />
     <Compile Include="DTOs\CharacterAttributeDto.cs" />
     <Compile Include="DTOs\CharacterAttributeRowDto.cs" />
@@ -89,6 +92,8 @@
     <Compile Include="DTOs\SmashAttributeTypeDto.cs" />
     <Compile Include="DTOs\UserDto.cs" />
     <Compile Include="EntityBusinessConverter.cs" />
+    <Compile Include="Hitbox.cs" />
+    <Compile Include="KnockbackGrowth.cs" />
     <Compile Include="Modifiers.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Movement.cs" />
