--- a/FrannHammer.Core/FrannHammer.Core.csproj
+++ b/FrannHammer.Core/FrannHammer.Core.csproj
@@ -54,8 +54,8 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -72,7 +72,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculations\Calculator.cs" />
+    <Compile Include="CustomDtoExtensions.cs" />
     <Compile Include="Guard.cs" />
+    <Compile Include="DtoBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\AccountRequest.cs" />
     <Compile Include="Requests\CharacterAttributesRequest.cs" />
