- Moved IdentityModels - Created ability to dynamically form response based a 'fields' param in all GETs - Completed Issue # 52 - Completed Issue # 37 - Completed Issue # 58

--- a/FrannHammer.Core.Tests/FrannHammer.Core.Tests.csproj
+++ b/FrannHammer.Core.Tests/FrannHammer.Core.Tests.csproj
@@ -52,7 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CalculateTest.cs" />
-    <Compile Include="PoorMansGraphApiTests.cs" />
+    <Compile Include="DtoBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
