- Introducing initial support for cloud hosted integration tests

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ FrannHammer.Api/Scripts/
 FrannHammer.Services/bin/
 FrannHammer.Services/obj/
 FrannHammer.Services.Tests/obj/
+**/*/bin/
+**/*/obj/
+FrannHammer.Api.Data.Tests/ConnectionStringsTest.config
