- Added a few more tests verifying count numbers.  These are basic tests.

--- a/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
+++ b/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
@@ -85,10 +85,11 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="BaseIntegrityTest.cs" />
+    <Compile Include="BaseDataIntegrityTest.cs" />
     <Compile Include="CharacterIntegrityTest.cs" />
     <Compile Include="MovesIntegrityTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThrowsIntegrityTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
