- Added initial support for server-side caching via CacheCow. - This will generate an eTag based on response that client can store and verify via If-None-Match header when sending a request.

--- a/FrannHammer.Api/packages.config
+++ b/FrannHammer.Api/packages.config
@@ -4,6 +4,9 @@
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net45" />
   <package id="AutoMapper" version="5.0.2" targetFramework="net45" />
+  <package id="CacheCow.Common" version="1.2.0" targetFramework="net45" />
+  <package id="CacheCow.Server" version="1.2.0" targetFramework="net45" />
+  <package id="CacheCow.Server.EntityTagStore.SqlServer" version="1.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="3.1.0" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net45" />
