- Shifted test infrastructure to Azure instead of through physical files (Effort) - A single connectionstring is now used for all tests that require it.

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ FrannHammer.Services.Tests/obj/
 **/*/bin/
 **/*/obj/
 FrannHammer.Api.Data.Tests/ConnectionStringsTest.config
+ConnectionStringsTest.config
