- Added more tests around api data integrity - Added tests that ensure api data matches what's on KH site. - Changed webscraper character class to be named WebCharacter

--- a/FrannHammer.WebScraper/FrannHammer.WebScraper.csproj
+++ b/FrannHammer.WebScraper/FrannHammer.WebScraper.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Character.cs" />
+    <Compile Include="WebCharacter.cs" />
     <Compile Include="CharacterAttributeStats.cs" />
     <Compile Include="CharacterConstants.cs" />
     <Compile Include="CharacterUtility.cs" />
