--- a/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
+++ b/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
@@ -78,7 +78,12 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BaseDataIntegrityTest.cs" />
+    <Compile Include="CharacterDbToKhIntegrityTest.cs" />
     <Compile Include="CharacterIntegrityTest.cs" />
+    <Compile Include="MoveDbToKhIntegrityTest.cs" />
+    <Compile Include="MovementDbToKhIntegrityTest.cs" />
+    <Compile Include="MovementIntegrityTest.cs" />
+    <Compile Include="MoveMetadataIntegrityTest.cs" />
     <Compile Include="MovesIntegrityTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThrowsIntegrityTest.cs" />
@@ -103,6 +108,10 @@
     <ProjectReference Include="..\FrannHammer.Services\FrannHammer.Services.csproj">
       <Project>{7E5C008B-AE84-4D50-BC4B-9D49D8D53870}</Project>
       <Name>FrannHammer.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.WebScraper\FrannHammer.WebScraper.csproj">
+      <Project>{9d3c1343-f4b4-4538-b0e0-590d3b2f5de3}</Project>
+      <Name>FrannHammer.WebScraper</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
