- Minor refactoring - Introduced EntityNotFoundException in Services layer. - First ActionFilter attribute in use for checking whether or not any objects are found in the database based on request parameters.  Will handle various Service layer exceptions more gracefully than what's currently happening (empty 200 for invalid / not found objects).

--- a/FrannHammer.Services/FrannHammer.Services.csproj
+++ b/FrannHammer.Services/FrannHammer.Services.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseService.cs" />
+    <Compile Include="Exceptions\EntityNotFoundException.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="MetadataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
