--- a/FrannHammer.Models/FrannHammer.Models.csproj
+++ b/FrannHammer.Models/FrannHammer.Models.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Compile Include="NotationTypes.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
