--- a/FrannHammer.Services.Tests/packages.config
+++ b/FrannHammer.Services.Tests/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Effort.EF6" version="1.1.5" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Moq" version="4.5.21" targetFramework="net452" />
+  <package id="NMemory" version="1.1.0" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net452" />
 </packages>
