Fixed issue with copying to output + fakedb folder when folder was new

--- a/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
+++ b/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
@@ -144,7 +144,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(SolutionDir)ConnectionStringsTest.config" "$(TargetDir)" /I /Y
-xcopy "$(SolutionDir)fakeDb" "$(TargetDir)\fakeDb" /I /S</PostBuildEvent>
+xcopy "$(SolutionDir)fakeDb" "$(TargetDir)\fakeDb" /I /S /Y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
