--- a/FrannHammer.Api/packages.config
+++ b/FrannHammer.Api/packages.config
@@ -10,6 +10,14 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="3.1.0" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.15.1" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.JavaScript" version="0.22.19-build00125" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
